fix overflow

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -501,3 +501,7 @@ video {
     display: block;
     margin-top: 1em;
 }
+
+#root {
+    overflow: hidden;
+}
